--- a/CSS/book-3d/index.html
+++ b/CSS/book-3d/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3rd book</title>
+    <title>3d book</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
